MySQL connection works

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     links:
       - db
     environment:
-      DB_USER: person
+      DB_USER: user
       DB_NAME: app
       DB_PASSWORD: password
       DB_HOST: db
