switch to using volume for hot code reload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build: .
     command: rails s -p 3000 -b '0.0.0.0'
     volumes: 
-      - ".:/app"
+      - ".:/var/app"
     ports:
       - "3001:3000"
     depends_on:
